Fix skate statistics alignment

--- a/frontend-files/src/stylesheets/levels/Statistic.css
+++ b/frontend-files/src/stylesheets/levels/Statistic.css
@@ -52,7 +52,8 @@
 
 .st-title {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 22px;
     margin-top: -20px;
 }
 
